--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
