--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
 }
