--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,16 @@
 
     <application
         android:allowBackup="true"
+        android:allowClearUserData="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:allowClearUserData="true"
-        android:theme="@style/Theme.CST438_Project03_Group03">
+        android:theme="@style/Theme.CST438_Project03_Group03"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".LiveFeedActivity"
+            android:exported="false" />
         <activity
             android:name=".ForgotPasswordActivity"
             android:exported="false" />
