--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.CST438_Project03_Group03"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ImageActivity"
+            android:exported="false" />
+        <activity
             android:name=".ViewCommentsActivity"
             android:exported="false" />
         <activity
