--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
+
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 }
